Fix flex-wrap not working on safari

--- a/src/sass/components/schedule.scss
+++ b/src/sass/components/schedule.scss
@@ -136,7 +136,7 @@
 		}
 
 		section {
-			flex: 1;
+			flex: 1 0 auto;
 			min-width: 150px;
 			margin-top: 1em;
 			margin-left: 1em;
